# midea-iot

./: LICENSE  README.md  pyproject.toml  requirements.txt
midea_iot/: const.py  sst.py  uart.py  util.py  wifi.py
midea_iot/local/: broadcast.py  request.py  response.py
